--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
+
 .site-layout-background {
   background: #404040;
+}
+
+.title-card{
+  font-family:'Otomanopee One', 'sans-serif';
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 6s linear;
+  }
+}
+
+@keyframes App-logo-spin{
+  0% {
+    transform: rotate(-5deg);
+  }
+  50% {
+   transform: rotate(60deg);
+ }
+ 100% {
+   transform: rotate(-5deg);
+ } 
+}
+
+.inpu{
+  background: transparent;
+  outline: 0;
+  border-width: 0 0 2px 0;
+  border-color:teal;
+  color: #f2f2f2;
+  font-size: 20px;
+  height: 30px;
+  line-height: 30px;
+  outline: none !important;
+  width: 100%;
+}
+
+
+.inpu:hover{
+  outline: 0;
+  border-width: 0px 0px 2px 0px;
+  border-color:white;
+}
+
+.inpu:focus{
+  border: 0;
+  color: #f2f2f2;
+  outline: none !important;
+  background-color: black;
+
+}
+
+.btn-send{
+  border-radius: 10px;
+  background: #28B463;
+  color: #FFFFFF;
+  border-color: #28B463;
+}
+
+.btn-send:hover{
+  background: #58D68D;
+  color: #FFFFFF;
+  border-color:#58D68D;
+}
+
+.btn-send:active ,.btn-send:focus{
+  background: #1D8348;
+  color: #FFFFFF;
+  border-color: #1D8348;
 }
