--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,15 @@
   color: #FFFFFF;
   border-color: #1D8348;
 }
+
+.ant-table-thead > tr > th{
+  font-family: "Open Sans", arial;
+  font-size: medium;
+  background: steelblue;
+  font-weight: lighter;
+  text-shadow: 0 1px 0 #38678f;
+  color: white;
+  border: 1px solid #38678f;
+  box-shadow: inset 0px 1px 2px #568ebd;
+  transition: all 0.2s;
+}
